--- a/index.html
+++ b/index.html
@@ -4,9 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DevPixelStudios</title>
-    <link rel="stylesheet" href="assets/css/style.css">
-	<link rel="stylesheet" href="assets/lib/bootstrap-5.0.2/dist/css/bootstrap.min.css">
-	<link rel="stylesheet" href="assets/lib/Font awesome/fontawesome-free-5.15.4-web/css/all.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 	<style>
 	   i{
 	     color:white;
@@ -143,6 +141,7 @@
   <footer class="bg-dark text-white text-center py-3">
      <p class="mb-0">© DevPixelStudios -- Powered by code, driven by passion</p>
   </footer>
-  <script src="assets/lib/bootstrap-5.0.2/dist/js/bootstrap.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
