--- a/about.html
+++ b/about.html
@@ -51,8 +51,9 @@
 	 <p> We prioritize understanding over shortcuts, clean structure over clutter, and Long term growth 
 	    over quick results. Every Project is an opportunity to improve and Innovate</p>
 </section>
-<footer class="bg-dark text-white text-center py-3 mt-5">© DevPixelStudios</footer>
+<footer class="bg-dark text-white text-center py-3 mt-5">© DevPixelStudio</footer>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
+
