--- a/contact.html
+++ b/contact.html
@@ -65,7 +65,7 @@
 		 <button class="btn btn-brand w-100" type="submit">Send Message</button>
 	 </form>
   </Section>
-  <footer class="footer bg-dark text-white text-center py-3 ">
+  <footer class=" bg-dark text-white text-center py-3 ">
  <p class="mb-0">© DevPixelStudios
   </p>  
   </footer>
@@ -73,5 +73,6 @@
 </body>
 
 </html>
+
 
 
