--- a/contact.html
+++ b/contact.html
@@ -48,22 +48,31 @@
 	    <h1 class="fw-bold"> Contact Us</h1>
 		<p class="text-muted">Let's connect and build something great</p>
 	 </div>
-	 <form name="contact" method='POST' data-netlify-honeypot="bot-field">
-	     <input type="hidden" name="bot-field" value="contact">
-	     <div class="mb-3">
-		     <label class="form-label">Name</label>
-			 <input type="text" class="form-control" name="name" placeholder="Your Name" required>
-		 </div>
-		 <div class="mb-3">
-		     <label class="form-label">Email</label>
-			 <input type="email" class="form-control" name="email" placeholder="you@example.com" required>
-		 </div>
-		 <div class="mb-3">
-		     <label class="form-label">Message</label>
-			 <textarea class="form-control" rows="4" name="message" placeholder="Your Message..." required></textarea>
-		 </div>
-		 <button class="btn btn-brand w-100" type="submit">Send Message</button>
-	 </form>
+	<form name="contact" method="POST" data-netlify="true" data-netlify-honeypot="bot-field">
+  
+  <!-- Required hidden input -->
+  <input type="hidden" name="form-name" value="contact">
+  
+  <!-- Honeypot spam protection -->
+  <input type="hidden" name="bot-field">
+
+  <div class="mb-3">
+    <label class="form-label">Name</label>
+    <input type="text" class="form-control" name="name" placeholder="Your Name" required>
+  </div>
+
+  <div class="mb-3">
+    <label class="form-label">Email</label>
+    <input type="email" class="form-control" name="email" placeholder="you@example.com" required>
+  </div>
+
+  <div class="mb-3">
+    <label class="form-label">Message</label>
+    <textarea class="form-control" rows="4" name="message" placeholder="Your Message..." required></textarea>
+  </div>
+
+  <button class="btn btn-brand w-100" type="submit">Send Message</button>
+			   </form>
   </Section>
   <footer class=" bg-dark text-white text-center py-3 ">
  <p class="mb-0">© DevPixelStudios
@@ -73,6 +82,7 @@
 </body>
 
 </html>
+
 
 
 
