Modify contact form action to success.html
Updated contact form action to redirect to success page.

--- a/contact.html
+++ b/contact.html
@@ -48,7 +48,7 @@
 	    <h1 class="fw-bold"> Contact Us</h1>
 		<p class="text-muted">Let's connect and build something great</p>
 	 </div>
-	<form name="contact" method="POST" data-netlify="true" data-netlify-honeypot="bot-field">
+	<form name="contact" method="POST" data-netlify="true" data-netlify-honeypot="bot-field" action ="/success.html">
   
   <!-- Required hidden input -->
   <input type="hidden" name="form-name" value="contact">
@@ -82,6 +82,7 @@
 </body>
 
 </html>
+
 
 
 
