Fix typos and enhance project descriptions in project.html
Corrected typos and improved project descriptions in the HTML file.

--- a/project.html
+++ b/project.html
@@ -73,7 +73,7 @@
 		 <p class="text-muted small">  HTML | CSS | BOOTSTRAP  | JAVASCRIPT | NODEJS | MONGODB</p>
 		</div>
 		<div class="card-footer bg-transparent border-0">
-		 <a href="#" class="btn btn-brand btn-sm">View Project</a>
+		 <a href="https://github.com/creed2110/study" class="btn btn-brand btn-sm">View Project</a>
 		 <a href="#" class="btn btn-outline-secondary btn-sm">GitHub</a>
 		</div>
 	  </div>
@@ -129,3 +129,4 @@
 </body>
 
 </html>
+
