Fix typos and update project links in project.html
Corrected typos and updated project links.

--- a/project.html
+++ b/project.html
@@ -73,8 +73,8 @@
 		 <p class="text-muted small">  HTML | CSS | BOOTSTRAP  | JAVASCRIPT | NODEJS | MONGODB</p>
 		</div>
 		<div class="card-footer bg-transparent border-0">
-		 <a href="https://github.com/creed2110/study" class="btn btn-brand btn-sm">View Project</a>
-		 <a href="#" class="btn btn-outline-secondary btn-sm">GitHub</a>
+		 <a href="https://creed2110.github.io/study/" class="btn btn-brand btn-sm">View Project</a>
+		 <a href="https://github.com/creed2110/study" class="btn btn-outline-secondary btn-sm">GitHub</a>
 		</div>
 	  </div>
 	  </div>
@@ -129,4 +129,5 @@
 </body>
 
 </html>
+
 
