Enhance contact.html with SEO meta tags
Added meta tags for SEO and improved page title.

--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DevPixelStudios</title>
+    	<title>DevPixelStudios | Web Development & Digital Solutions</title>
+
+<meta name="description" content="DevPixelStudios builds responsive, modern and user-friendly websites. We specialize in web development, UI design and digital solutions.">
+
+<meta name="keywords" content="Web Development, Bootstrap, Frontend Developer, Nigeria Web Developer, DevPixelStudios">
+
+<meta name="author" content="DevPixelStudios">
+
+<meta name="robots" content="index, follow">
+
+<!-- Open Graph (For WhatsApp & Social Media Preview) -->
+<meta property="og:title" content="DevPixelStudios">
+<meta property="og:description" content="We build modern, responsive and powerful websites.">
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://devpixelstudios.netlify.app/">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 	<style>
 	   i{
@@ -82,6 +96,7 @@
 </body>
 
 </html>
+
 
 
 
